--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,7 @@
                 <configuration>
                     <includes>
                         <include>**/CukesRunner.java</include>
+                        <include>**/FailedScenarios.java</include>
                     </includes>
                     <testFailureIgnore>true</testFailureIgnore>
                 </configuration>
